--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,20 +25,22 @@ jobs:
 
       - name: Set service environment variables
         run: |
-          railway variables --set "COOKIE_DOMAIN=${{ secrets.COOKIE_DOMAIN }}" --service web-backend
-          railway variables --set "CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}" --service web-backend
-          railway variables --set "ENV=${{ secrets.ENV }}" --service web-backend
-          railway variables --set "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" --service web-backend
-          railway variables --set "GITHUB_APP_ID=${{ secrets.GH_APP_ID }}" --service web-backend
-          railway variables --set "GITHUB_APP_PRIVATE_KEY=${{ secrets.GH_APP_PRIVATE_KEY }}" --service web-backend
-          railway variables --set "GITHUB_APP_SLUG=${{ secrets.GH_APP_SLUG }}" --service web-backend
-          railway variables --set "GITHUB_APP_WEBHOOK_SECRET=${{ secrets.GH_APP_WEBHOOK_SECRET }}" --service web-backend
-          railway variables --set "GITHUB_OAUTH_CLIENT_ID=${{ secrets.GH_OAUTH_CLIENT_ID }}" --service web-backend
-          railway variables --set "GITHUB_OAUTH_CLIENT_SECRET=${{ secrets.GH_OAUTH_CLIENT_SECRET }}" --service web-backend
-          railway variables --set "GITHUB_OAUTH_REDIRECT_URL=${{ secrets.GH_OAUTH_REDIRECT_URL }}" --service web-backend
-          railway variables --set "JWT_SECRET=${{ secrets.JWT_SECRET }}" --service web-backend
-          railway variables --set "PROMO_DEFAULT_PLAN=${{ secrets.PROMO_DEFAULT_PLAN }}" --service web-backend
-          railway variables --set "SECURE_COOKIE=${{ secrets.SECURE_COOKIE }}" --service web-backend
+          railway variable set \
+            "COOKIE_DOMAIN=${{ secrets.COOKIE_DOMAIN }}" \
+            "CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}" \
+            "ENV=${{ secrets.ENV }}" \
+            "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" \
+            "GITHUB_APP_ID=${{ secrets.GH_APP_ID }}" \
+            "GITHUB_APP_PRIVATE_KEY=${{ secrets.GH_APP_PRIVATE_KEY }}" \
+            "GITHUB_APP_SLUG=${{ secrets.GH_APP_SLUG }}" \
+            "GITHUB_APP_WEBHOOK_SECRET=${{ secrets.GH_APP_WEBHOOK_SECRET }}" \
+            "GITHUB_OAUTH_CLIENT_ID=${{ secrets.GH_OAUTH_CLIENT_ID }}" \
+            "GITHUB_OAUTH_CLIENT_SECRET=${{ secrets.GH_OAUTH_CLIENT_SECRET }}" \
+            "GITHUB_OAUTH_REDIRECT_URL=${{ secrets.GH_OAUTH_REDIRECT_URL }}" \
+            "JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            "PROMO_DEFAULT_PLAN=${{ secrets.PROMO_DEFAULT_PLAN }}" \
+            "SECURE_COOKIE=${{ secrets.SECURE_COOKIE }}" \
+            --service web-backend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
