--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "specvital-core",
   "dockerComposeFile": "docker-compose.yml",
-  "initializeCommand": "touch ${HOME}/.env.secrets",
+  "initializeCommand": "bash .devcontainer/init-host.sh",
   "service": "workspace",
   "workspaceFolder": "/workspaces/specvital-core",
   "features": {
