--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ docs/work
 docs/e2e-ui
 .claude/settings.local.json
 .claude-sessions/
+.claude-session-config.json
 src/backend/tmp
 *.tsbuildinfo
 
