--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -216,6 +216,7 @@
       "color": "blue",
       "command": "export IS_SANDBOX=1 && claude --dangerously-skip-permissions",
       "name": "$(hubot) Claude",
+      "newTerminal": true,
       "shortcut": "c",
       "terminalName": "Claude Yolo",
       "useVsCodeApi": false
