--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/guiyomh/features/just:0": {},
+    "./local-features/go": {},
     "./local-features/node": {},
     "./local-features/python": {}
   },
