--- a/infra/package.json
+++ b/infra/package.json
@@ -7,9 +7,7 @@
     "url": "https://github.com/KubrickCode/specvital-infra.git"
   },
   "license": "MIT",
-  "scripts": {
-    "prepare": "husky"
-  },
+  "scripts": {},
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.1",
@@ -18,9 +16,6 @@
     "@semantic-release/github": "12.0.2",
     "@semantic-release/release-notes-generator": "14.1.0",
     "conventional-changelog-conventionalcommits": "9.1.0",
-    "husky": "9.1.7",
-    "lint-staged": "16.2.7",
-    "prettier": "3.6.2",
     "semantic-release": "24.2.0"
   }
 }
