--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,9 +8,7 @@
   },
   "license": "Apache-2.0",
   "type": "module",
-  "scripts": {
-    "prepare": "husky"
-  },
+  "scripts": {},
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.1",
@@ -19,9 +17,6 @@
     "@semantic-release/github": "12.0.2",
     "@semantic-release/release-notes-generator": "14.0.1",
     "conventional-changelog-conventionalcommits": "9.1.0",
-    "husky": "9.1.7",
-    "lint-staged": "16.2.7",
-    "prettier": "3.6.2",
     "semantic-release": "24.2.0"
   }
 }
