--- a/.github/workflows/release/release-tag.yml
+++ b/.github/workflows/release/release-tag.yml
@@ -1,49 +1,11 @@
-name: Deploy and Release
+name: Release Tag
 
 on:
-  push:
-    branches: [release]
-  workflow_dispatch:
-
-permissions:
-  contents: write
+  workflow_call:
 
 jobs:
-  deploy:
-    name: Deploy to Railway
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        service: [analyzer, spec-generator, retention-cleanup]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Set service environment variables
-        if: matrix.service == 'spec-generator'
-        run: |
-          railway variables --set "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" --service spec-generator
-          railway variables --set "GEMINI_PHASE1_MODEL=${{ secrets.GEMINI_PHASE1_MODEL }}" --service spec-generator
-          railway variables --set "GEMINI_PHASE2_MODEL=${{ secrets.GEMINI_PHASE2_MODEL }}" --service spec-generator
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-      - name: Deploy ${{ matrix.service }}
-        run: |
-          cp infra/${{ matrix.service }}/railway.json railway.json
-          railway up --service ${{ matrix.service }} --detach
-          rm railway.json
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
   release:
-    name: Release
     runs-on: ubuntu-latest
-    needs: deploy
 
     steps:
       - name: Checkout
@@ -76,7 +38,7 @@ jobs:
       - name: Run Semantic Release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           GIT_AUTHOR_NAME: "github-actions[bot]"
           GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
           GIT_COMMITTER_NAME: "github-actions[bot]"
@@ -91,4 +53,4 @@ jobs:
           git merge origin/release --no-edit
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git main
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
