--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,14 +14,6 @@
   },
   "devDependencies": {
     "@playwright/test": "1.50.1",
-    "@types/node": "22.15.21",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/exec": "7.1.0",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.2",
-    "@semantic-release/release-notes-generator": "14.1.0",
-    "conventional-changelog-conventionalcommits": "9.1.0",
-    "semantic-release": "24.2.0"
+    "@types/node": "22.15.21"
   }
 }
