--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -7,15 +7,5 @@
     "url": "https://github.com/specvital/worker.git"
   },
   "license": "Apache-2.0",
-  "scripts": {},
-  "devDependencies": {
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/exec": "7.1.0",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.2",
-    "@semantic-release/release-notes-generator": "14.0.1",
-    "conventional-changelog-conventionalcommits": "9.1.0",
-    "semantic-release": "24.2.0"
-  }
+  "scripts": {}
 }
