--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,17 +3,19 @@
     "bradgashler.htmltagwrap",
     "chunsen.bracket-select",
     "codezombiech.gitignore",
+    "databricks.neon-local-connect",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
     "gruntfuggly.todo-tree",
+    "hashicorp.hcl",
+    "intellsmi.comment-translate",
+    "kubrickcode.quick-command-buttons",
     "mhutchie.git-graph",
     "ms-azuretools.vscode-docker",
     "ms-vscode-remote.remote-containers",
     "skellock.just",
     "streetsidesoftware.code-spell-checker",
-    "wayou.vscode-todo-highlight",
     "usernamehw.errorlens",
-    "kubrickcode.quick-command-buttons",
-    "intellsmi.comment-translate"
+    "wayou.vscode-todo-highlight"
   ]
 }
