--- a/apps/web/justfile
+++ b/apps/web/justfile
@@ -10,7 +10,7 @@ deps-frontend:
     cd src/frontend && pnpm install
 
 dump-schema:
-    PGPASSWORD=postgres pg_dump -h specvital-postgres -U postgres -d specvital --schema-only --no-owner --no-privileges -n public | grep -v '^\\\|^SET \|^SELECT ' > src/backend/internal/db/schema.sql
+    PGPASSWORD=postgres pg_dump -h postgres -U postgres -d specvital --schema-only --no-owner --no-privileges -n public | grep -v '^\\\|^SET \|^SELECT ' > src/backend/internal/db/schema.sql
 
 gen-sqlc:
     cd src/backend && sqlc generate
@@ -59,31 +59,25 @@ typecheck-file file:
       npx tsc --noEmit --incremental
     fi
 
-# Local db migration always initializes the database
+# Reset database and apply schema from SQL dump
 migrate-local:
     #!/usr/bin/env bash
     set -euo pipefail
-    echo "Resetting local database..."
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -c "DROP DATABASE IF EXISTS specvital;"
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -c "CREATE DATABASE specvital;"
+    echo "Resetting database..."
+    PGPASSWORD=postgres psql -h postgres -U postgres -c "DROP DATABASE IF EXISTS specvital;"
+    PGPASSWORD=postgres psql -h postgres -U postgres -c "CREATE DATABASE specvital;"
     echo "Applying schema..."
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -d specvital -f src/backend/internal/db/schema.sql
+    PGPASSWORD=postgres psql -h postgres -U postgres -d specvital -f src/backend/internal/db/schema.sql
     echo "Inserting seed data..."
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -d specvital -f src/backend/internal/db/seed.sql
-    echo "✅ Migration complete!"
+    PGPASSWORD=postgres psql -h postgres -U postgres -d specvital -f src/backend/internal/db/seed.sql
+    echo "Migration complete!"
 
 run target *args:
     #!/usr/bin/env bash
     set -euox pipefail
     case "{{ target }}" in
       backend)
-        cd src/backend
-        if [[ " {{ args }} " =~ " --integration " ]]; then
-          air
-        else
-          DATABASE_URL="$LOCAL_DATABASE_URL" \
-          air
-        fi
+        cd src/backend && air
         ;;
       frontend)
         cd src/frontend && pnpm dev
@@ -120,49 +114,6 @@ build target="all":
         ;;
     esac
 
-run-analyzer:
-    #!/usr/bin/env bash
-    set -euo pipefail
-    if [ ! -d "/tmp/worker" ]; then
-        echo "Cloning worker repository..."
-        git clone https://github.com/specvital/worker.git /tmp/worker
-    else
-        echo "Updating worker repository..."
-        cd /tmp/worker && git pull
-    fi
-    cd /tmp/worker/src && \
-    DATABASE_URL="$LOCAL_DATABASE_URL" \
-    GITHUB_TOKEN="$GH_TOKEN" \
-    go run ./cmd/analyzer
-
-run-spec-generator:
-    #!/usr/bin/env bash
-    set -euo pipefail
-    if [ ! -d "/tmp/worker" ]; then
-        echo "Cloning worker repository..."
-        git clone https://github.com/specvital/worker.git /tmp/worker
-    else
-        echo "Updating worker repository..."
-        cd /tmp/worker && git pull
-    fi
-    cd /tmp/worker/src && \
-    DATABASE_URL="$LOCAL_DATABASE_URL" \
-    go run ./cmd/spec-generator
-
-run-mock-spec-generator:
-    #!/usr/bin/env bash
-    set -euo pipefail
-    if [ ! -d "/tmp/worker" ]; then
-        echo "Cloning worker repository..."
-        git clone https://github.com/specvital/worker.git /tmp/worker
-    else
-        echo "Updating worker repository..."
-        cd /tmp/worker && git pull
-    fi
-    cd /tmp/worker/src && \
-    DATABASE_URL="$LOCAL_DATABASE_URL" \
-    MOCK_MODE=true \
-    go run ./cmd/spec-generator
 
 test target="all":
     #!/usr/bin/env bash
