--- a/apps/worker/justfile
+++ b/apps/worker/justfile
@@ -8,25 +8,11 @@ clean-containers:
     docker ps -a --filter "label=org.testcontainers=true" -q | xargs -r docker rm -f
 
 dump-schema:
-    PGPASSWORD=postgres pg_dump -h specvital-postgres -U postgres -d specvital --schema-only --no-owner --no-privileges -n public | grep -v '^\\\|^SET \|^SELECT ' > src/internal/infra/db/schema.sql
+    PGPASSWORD=postgres pg_dump -h postgres -U postgres -d specvital --schema-only --no-owner --no-privileges -n public | grep -v '^\\\|^SET \|^SELECT ' > src/internal/infra/db/schema.sql
     cp src/internal/infra/db/schema.sql src/internal/testutil/postgres/schema.sql
 
-enqueue mode="local" *args:
-    #!/usr/bin/env bash
-    set -euo pipefail
-    cd src
-    case "{{ mode }}" in
-      local)
-        DATABASE_URL="$LOCAL_DATABASE_URL" go run ./cmd/enqueue {{ args }}
-        ;;
-      integration)
-        go run ./cmd/enqueue {{ args }}
-        ;;
-      *)
-        echo "Unknown mode: {{ mode }}. Use: local, integration"
-        exit 1
-        ;;
-    esac
+enqueue *args:
+    cd src && go run ./cmd/enqueue {{ args }}
 
 gen-sqlc:
     cd src && sqlc generate
@@ -56,16 +42,16 @@ install-railway:
 install-sqlc:
     go install github.com/sqlc-dev/sqlc/cmd/sqlc@v1.28.0
 
-# Local db migration always initializes the database
+# Reset database and apply schema from SQL dump
 migrate-local:
     #!/usr/bin/env bash
     set -euo pipefail
-    echo "Resetting local database..."
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -c "DROP DATABASE IF EXISTS specvital;"
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -c "CREATE DATABASE specvital;"
+    echo "Resetting database..."
+    PGPASSWORD=postgres psql -h postgres -U postgres -c "DROP DATABASE IF EXISTS specvital;"
+    PGPASSWORD=postgres psql -h postgres -U postgres -c "CREATE DATABASE specvital;"
     echo "Applying schema..."
-    PGPASSWORD=postgres psql -h local-postgres -U postgres -d specvital -f src/internal/infra/db/schema.sql
-    echo "✅ Migration complete!"
+    PGPASSWORD=postgres psql -h postgres -U postgres -d specvital -f src/internal/infra/db/schema.sql
+    echo "Migration complete!"
 
 build target="all":
     #!/usr/bin/env bash
@@ -100,56 +86,14 @@ build target="all":
         ;;
     esac
 
-run-analyzer mode="local":
-    #!/usr/bin/env bash
-    set -euo pipefail
-    cd src
-    case "{{ mode }}" in
-      local)
-        DATABASE_URL="$LOCAL_DATABASE_URL" air
-        ;;
-      integration)
-        air
-        ;;
-      *)
-        echo "Unknown mode: {{ mode }}. Use: local, integration"
-        exit 1
-        ;;
-    esac
+run-analyzer:
+    cd src && air
 
-run-spec-generator mode="local":
-    #!/usr/bin/env bash
-    set -euo pipefail
-    cd src
-    case "{{ mode }}" in
-      local)
-        DATABASE_URL="$LOCAL_DATABASE_URL" air -c .air.spec-generator.toml
-        ;;
-      integration)
-        air -c .air.spec-generator.toml
-        ;;
-      *)
-        echo "Unknown mode: {{ mode }}. Use: local, integration"
-        exit 1
-        ;;
-    esac
+run-spec-generator:
+    cd src && air -c .air.spec-generator.toml
 
-run-retention-cleanup mode="local":
-    #!/usr/bin/env bash
-    set -euo pipefail
-    cd src
-    case "{{ mode }}" in
-      local)
-        DATABASE_URL="$LOCAL_DATABASE_URL" go run ./cmd/retention-cleanup
-        ;;
-      integration)
-        go run ./cmd/retention-cleanup
-        ;;
-      *)
-        echo "Unknown mode: {{ mode }}. Use: local, integration"
-        exit 1
-        ;;
-    esac
+run-retention-cleanup:
+    cd src && go run ./cmd/retention-cleanup
 
 sync-docs:
     baedal specvital/specvital.github.io/docs docs --exclude ".vitepress/**"
