refactor: centralize Railway deploy configs into root infra/railway/
Consolidate Railway configs (railway.json + Dockerfile) scattered across
apps/web/infra/ and apps/worker/infra/ into root infra/railway/.

Update Dockerfile COPY paths with apps/web/ and apps/worker/ prefixes
since build context is now repo root.

--- a/.github/workflows/release/deploy-workers.yml
+++ b/.github/workflows/release/deploy-workers.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Deploy ${{ matrix.service }}
         run: |
-          cp apps/worker/infra/${{ matrix.service }}/railway.json railway.json
+          cp infra/railway/${{ matrix.service }}/railway.json railway.json
           railway up --service ${{ matrix.service }} --detach
           rm railway.json
         env:
