ifix(ci): fix eslint command for pnpm workspace context
Before monorepo consolidation, src/frontend was a standalone project
where `pnpm eslint` could resolve the binary from local node_modules/.bin.
In pnpm workspace, `pnpm <cmd>` only looks for package.json scripts.

Change `pnpm eslint` to `pnpm exec eslint` for direct binary execution.

--- a/apps/web/justfile
+++ b/apps/web/justfile
@@ -42,7 +42,7 @@ install-oapi-codegen:
 
 lint-frontend:
     npx prettier --write --cache "src/frontend/**/*.{ts,tsx}"
-    cd src/frontend && pnpm eslint --fix --max-warnings=0 .
+    cd src/frontend && pnpm exec eslint --fix --max-warnings=0 .
 
 typecheck-file file:
     #!/usr/bin/env bash
