ifix(ci): fix CI dependency installation for monorepo workspace
Two CI failures after monorepo consolidation:

1. lint: pnpm install in src/frontend detects parent pnpm-workspace.yaml
   and runs in workspace mode, skipping local node_modules creation.
   → Use --ignore-workspace flag for independent install, npx for binary.

2. e2e: just deps in apps/web only calls deps-frontend, missing root
   pnpm install needed for apps/web/node_modules (playwright).
   → Split into deps-root + deps-frontend like lint workflow.

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -74,8 +74,12 @@ jobs:
           PGPASSWORD=postgres psql -h localhost -U postgres -d specvital_test -c "DROP SCHEMA IF EXISTS public CASCADE;"
           PGPASSWORD=postgres psql -h localhost -U postgres -d specvital_test -f src/backend/internal/db/schema.sql
 
-      - name: Install dependencies
-        run: just deps
+      - name: Install workspace dependencies
+        working-directory: .
+        run: just deps-root
+
+      - name: Install frontend dependencies
+        run: just deps-frontend
 
       - name: Install Playwright browsers
         run: just install-playwright
