refactor: add spec-generator mock runner and remove unused smee
补 items missed during monorepo consolidation in 77e99038.
Add justfile recipe to run spec-generator with MOCK_MODE=true, expand
Run All button to launch all 4 services (backend, frontend, analyzer,
spec-generator-mock) simultaneously. Remove smee webhook proxy setup
that is no longer in use.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,18 @@
               "name": "frontend",
               "shortcut": "f",
               "terminalName": "frontend"
+            },
+            {
+              "command": "just run analyzer",
+              "name": "analyzer",
+              "shortcut": "w",
+              "terminalName": "analyzer"
+            },
+            {
+              "command": "just run spec-generator-mock",
+              "name": "spec-generator-mock",
+              "shortcut": "g",
+              "terminalName": "spec-generator-mock"
             }
           ]
         },
@@ -101,10 +113,10 @@
           "terminalName": "spec-generator"
         },
         {
-          "command": "cd apps/web && just smee",
-          "name": "Smee",
-          "shortcut": "s",
-          "terminalName": "smee"
+          "command": "just run spec-generator-mock",
+          "name": "Spec Generator Mock",
+          "shortcut": "m",
+          "terminalName": "spec-generator-mock"
         }
       ]
     },
