refactor: consolidate migrate-local into single root migrate
migrate-local in each app was a remnant from the multi-repo era,
missed during monorepo consolidation in 77e99038. With a single
docker-compose DB, infra's Atlas migrate is sufficient. Consolidate
into root justfile migrate recipe that runs Atlas migration then
dumps schemas to both web and worker.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -213,7 +213,7 @@
       "shortcut": "d",
       "group": [
         {
-          "command": "cd infra && just migrate",
+          "command": "just migrate",
           "name": "Migrate",
           "shortcut": "m",
           "terminalName": "migrate"
@@ -236,18 +236,6 @@
           "name": "ERD",
           "shortcut": "e",
           "terminalName": "erd"
-        },
-        {
-          "command": "cd apps/web && just migrate-local",
-          "name": "Migrate Local Web",
-          "shortcut": "w",
-          "terminalName": "migrate-local web"
-        },
-        {
-          "command": "cd apps/worker && just migrate-local",
-          "name": "Migrate Local Worker",
-          "shortcut": "k",
-          "terminalName": "migrate-local worker"
         },
         {
           "command": "cd apps/web && just dump-schema",
