refactor: unify lint/lint-file rules into per-language helper recipes
lint and lint-file defined lint rules independently, causing drift (go vet missing from lint, eslint missing from lint-file).
Extracted per-language _lint-* helpers as single source of truth with batch/file mode dispatch to guarantee rule consistency.

--- a/apps/web/justfile
+++ b/apps/web/justfile
@@ -18,8 +18,7 @@ gen-api:
     cd frontend && npx openapi-typescript ../backend/api/openapi.yaml -o lib/api/generated-types.ts
 
 lint-frontend:
-    npx prettier --write --cache "frontend/**/*.{ts,tsx}"
-    cd frontend && npx eslint --fix --max-warnings=0 .
+    cd {{ root_dir }} && just _lint-ts batch
 
 typecheck-file file:
     #!/usr/bin/env bash
