ci: add Vercel CLI frontend deploy workflow and rename deploy-web to deploy-backend
Frontend deployment was missing from the release pipeline, requiring manual deploys.
Add a Vercel CLI-based workflow_call workflow for production frontend deployment,
and rename deploy-web to deploy-backend to disambiguate now that frontend exists.

- Add release-deploy-frontend.yml (vercel pull → build → deploy --prebuilt)
- Rename release-deploy-web.yml → release-deploy-backend.yml
- Add deploy-frontend job to release.yml (parallel with backend/workers after migrate)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,16 @@ jobs:
     uses: ./.github/workflows/release-migrate.yml
     secrets: inherit
 
-  deploy-web:
-    name: Deploy Web
+  deploy-frontend:
+    name: Deploy Frontend
     needs: migrate
-    uses: ./.github/workflows/release-deploy-web.yml
+    uses: ./.github/workflows/release-deploy-frontend.yml
+    secrets: inherit
+
+  deploy-backend:
+    name: Deploy Backend
+    needs: migrate
+    uses: ./.github/workflows/release-deploy-backend.yml
     secrets: inherit
 
   deploy-workers:
@@ -28,6 +34,6 @@ jobs:
 
   release:
     name: Release
-    needs: [deploy-web, deploy-workers]
+    needs: [deploy-frontend, deploy-backend, deploy-workers]
     uses: ./.github/workflows/release-tag.yml
     secrets: inherit
